# seismic_web

./: .tool-versions  LICENSE  README.md  pyproject.toml
seismic_backend/: manage.py
seismic_backend/seismic_backend/: asgi.py  settings.py  urls.py  wsgi.py
seismic_backend/seismic_events/: apps.py  models.py  urls.py  views.py
seismic_backend/seismic_events/migrations/: 0001_initial.py
seismic_backend/seismic_events/templates/seismic_events/: cal_event_station_distance.html
seismic_backend/seismic_stations/: admin.py  apps.py  models.py
seismic_backend/seismic_stations/migrations/: 0001_initial.py
