[tool.poetry]
name = "seismic-web"
version = "0.1.0"
description = ""
authors = ["codepanda <codepanda@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
websocket-client = "^1.6.4"
geopy = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
